[project]
name = "z4j-taskiq"
version = "1.6.7"
description = "z4j taskiq queue engine adapter (Apache 2.0)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "z4j contributors" }]
keywords = ["z4j", "taskiq", "asyncio", "task", "queue"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "z4j-core>=1.4.0,<2",
    "taskiq>=0.11,<1",
]

[project.scripts]
# 1.1.2+ console script. Both ``z4j-taskiq`` (pip-installed entry
# point) and ``python -m z4j_taskiq`` (module form) work and
# dispatch to the same code path. Engine adapters are libraries,
# so the CLI is doctor / check / status / version only - no
# ``run`` or ``restart`` (those belong to framework adapters).
z4j-taskiq = "z4j_taskiq.cli:main"

[project.urls]
Changelog = "https://github.com/z4jdev/z4j-taskiq/blob/main/CHANGELOG.md"
Documentation = "https://z4j.dev"
Homepage = "https://z4j.com"
Issues = "https://github.com/z4jdev/z4j-taskiq/issues"
Source = "https://github.com/z4jdev/z4j-taskiq"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4j_taskiq"]
